--- a/GameFinalProject/GameFinalProject.csproj
+++ b/GameFinalProject/GameFinalProject.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Component\AboutComponent.cs" />
+    <Compile Include="Component\Astronaut.cs" />
     <Compile Include="Scene\AboutScene.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Scene\GameScene.cs" />
